Carousel - work on grid and layout bug

--- a/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
+++ b/src/components/HomePage/Hero/HeroCarousel/heroCarousel.module.css
@@ -1,34 +1,25 @@
 .carouselContainer {
   /* position: relative; */
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch; */
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto;
+  align-self: stretch;
 }
 
 
 .slider {
   /* align-self: stretch; */
-  grid-row: 1 / 2;
+  /* grid-row: 1 / 2; */
 }
 
 .slider>ul {
   /* width: 100%; */
-  height: 500px;
+  /* height: 500px; */
   display: flex;
   gap: 4vw;
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
 
-  /* Hide scrollbar */
+  /* Hide scrollbar FIrefox & Edge */
   scrollbar-width: none;
-  /* Firefox */
   -ms-overflow-style: none;
-  /* IE and Edge */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -37,20 +28,21 @@
 }
 
 .slider li {
-  background-color: #eeeeee;
-  border: 1px solid #dddddd;
-  padding: 20px;
-
   flex: 0 0 100%;
   scroll-snap-align: center;
 }
 
+.slider li>div {
+  padding: 20px;
+
+}
+
 .slider li:nth-child(even) {
-  background-color: brown;
+  background-color: rgb(240, 186, 186);
 }
 
 .slider li:nth-child(odd) {
-  background-color: rebeccapurple;
+  background-color: rgb(217, 198, 235);
 }
 
 .buttonsContainer {
@@ -58,20 +50,5 @@
   justify-content: center;
   gap: 20px;
   grid-row: 2 / 3;
-  z-index: 10;
+  /* z-index: 10; */
 }
-
-/* .navButton {
-  background: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  font-size: 2rem;
-  padding: 10px 15px;
-  cursor: pointer;
-  border-radius: 4px;
-  z-index: 10;
-}
-
-.navButton:hover {
-  background: rgba(0, 0, 0, 0.7);
-} */
